Spacing Small fix

--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ nav a:hover {
 }
 
 .main article h1 {
-    font-size: 44px;
+    font-size: 50px;
 	line-height: 100%;
 	font-family: "courier new";
 	margin: 10px 10px 10px -5%;
